# AudioBookzOrganizer

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CLAUDE2.md  CONTRIBUTING.md  Organize.py  README.md  designCLAUDE.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  docs.yml
audiobookcleanr/: __init__.py  benchmark.py  cache.py  cli.py  core.py  fetcher.py  logger.py  models.py  tagger.py  tui.py
audiobookz_organizer/: __main__.py  cache.py  cli.py  core.py  fetcher.py  logger.py  metadata.py  models.py  parser.py  tui.py  utils.py
audioboookz_organizer/: __init__.py  cli.py  core.py  models.py
docs/: cli.rst  conf.py  core.rst  index.rst  models.rst
tests/: __init__.py  test_cli.py  test_core.py  test_fetcher.py  test_metadata.py  test_parser.py
