[project]
name = "audiobookz-organizer"
version = "1.0.0"
description = "A utility to organize audiobook collections."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
dependencies = [
    "mutagen",
]

[project.scripts]
organize-audiobooks = "audioboookz_organizer.cli:main"

[project.optional-dependencies]
test = [
    "pytest",
]
